# TexPad

./: CMakeLists.txt  README.md
scripts/: main.py
src/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  parser.cpp  parser.h
